# Synapse

./: .env  .env.example  .gitattributes  .gitignore  .vercelignore  AZURE_BACKEND_CHECKLIST.md  CHANGES_MAP.md  DATABASE_CONFIG.md  GOOGLE_MAPS_INTEGRATION.md  GUIA_INSTALACAO_LOCAL.md  Login_new.tsx  Login_old.tsx  Procfile  SETUP_LOCAL.md  TESTE_LOCAL.md  apply_schemas.py  arquivei_api_notes.md  backend_full.ts  check_user.py  debug_log.txt  debug_log_completo.txt  drizzle.config.ts  final_config_fix.cjs  final_fix_script.cjs  fix_database_and_permissions.sql  index.html  migrate.js  migrate.py  nixpacks.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.json  run_tests.sh  server  setup_admin_user.py  setup_frontend.cjs  setup_frontend_v2.cjs  setup_master_admin.py  (+7 more)
agent/: README.md  instalar_linux.sh  instalar_windows.bat  synapse_agent.py
docs/: SYNAPSE_ACCEPTANCE_BASELINE.md  SYNAPSE_AI_KNOWLEDGE_ARCHITECTURE.md  SYNAPSE_AUDIT_2026-04-30.md  SYNAPSE_ENTERPRISE_PRODUCTIZATION_MATRIX.md  SYNAPSE_FULL_STATUS_2026-05-02.md  SYNAPSE_HOMOLOGATION_CHECKLIST.md  SYNAPSE_NEXT_GEN_BLUEPRINT.md  SYNAPSE_PRODUCT_UX_DIRECTION.md  (+4 more)
synapse-agent/: Cargo.toml  agent.js  install-service.js  package.json  pnpm-lock.yaml  uninstall-service.js
synapse-agent/src/: main.rs
synapse-agent/src-tauri/: Cargo.toml  tauri.conf.json
synapse-agent/src-tauri/capabilities/: default.json
synapse-agent/src-tauri/src/: lib.rs  main.rs
synapse-agent/ui/: index.html  package-lock.json  package.json  pnpm-lock.yaml
synapse-agent/ui/src/: App.css  App.tsx
(+159 files in other folders)
