[package]
name = "synapse-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
sysinfo = "0.30.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.38", features = ["full"] }
tauri = { version = "1.6", features = ["system-tray", "shell-open"] }
serde_repr = "0.1"

