[package]
name = "synapse-studio"
version = "0.1.0"
description = "Synapse Studio - AI Assisted Development Tool"
authors = ["DanielSalesMelo"]
edition = "2021"

[dependencies]
eframe = "0.31.0"
egui = "0.31.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
sysinfo = "0.36.1"
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.52.1", features = ["full"] }
muda = "0.17.0"
open = "5.3.2"
